add concurrently script

--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "Contacts list MERN ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": " cd backend && npm run dev",
+    "client": "cd client && npm start",
+    "dev": "concurrently \" npm run server \" \" npm run client  \" "
   },
   "author": "Hannachi Mehdi",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^6.0.0"
+  }
 }
